--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -5,9 +5,9 @@
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <%= csrf_meta_tags %>
     <%= csp_meta_tag %>
-
+    
     <%= stylesheet_link_tag "application", "data-turbo-track": "reload" %>
-
+    <%= javascript_include_tag "application", type: "module" %>
     <!-- Bootstrap CSS -->
     <link
       href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css"
@@ -34,7 +34,13 @@
       </div>
     <% end %>
 
-    <%= yield %>
+    <%= render 'shared/navbar' %>
+
+    <main class="container mt-4">
+      <%= yield %>
+    </main>
+
+    <%= render 'shared/footer' %>
 
     <!-- Bootstrap JS (with Popper) -->
     <script
