--- a/app/views/dashboard/index.html.erb
+++ b/app/views/dashboard/index.html.erb
@@ -1,2 +1,5 @@
 <h1>Dashboard</h1>
 <p>Welcome to your dashboard. This is a placeholder view.</p>
+<% if @loading %>
+  <%= render 'shared/loading_spinner' %>
+<% end %>
