--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -34,6 +34,10 @@
       </div>
     <% end %>
 
+    <% if flash[:error] %>
+      <%= render 'shared/error_banner', message: flash[:error] %>
+    <% end %>
+
     <%= render 'shared/navbar' %>
 
     <main class="container mt-4">
