--- a/app/views/skill_exchange_requests/new.html.erb
+++ b/app/views/skill_exchange_requests/new.html.erb
@@ -1,4 +1,7 @@
 <div class="container my-5">
+  <% if @loading %>
+    <%= render 'shared/loading_spinner' %>
+  <% end %>
   <div class="card shadow p-4 mx-auto" style="max-width: 700px;">
     <h2 class="text-center mb-4 text-primary">Post a Skill Exchange Request</h2>
 
