--- a/app/views/shared/_navbar.html.erb
+++ b/app/views/shared/_navbar.html.erb
@@ -1,26 +1,32 @@
 <nav class="navbar navbar-expand-lg navbar-dark bg-primary">
   <div class="container-fluid">
-    <a class="navbar-brand" href="/">TeachMeBack</a>
+    <%= link_to "TeachMeBack", current_user ? explore_path : root_path, class: "navbar-brand" %>
     <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
       <span class="navbar-toggler-icon"></span>
     </button>
     <div class="collapse navbar-collapse" id="navbarNav">
       <ul class="navbar-nav ms-auto">
-        <li class="nav-item">
-          <%= link_to 'Dashboard', dashboard_path, class: 'nav-link' %>
-        </li>
-        <li class="nav-item">
-          <%= link_to 'Match', match_path, class: 'nav-link' %>
-        </li>
-        <li class="nav-item">
-          <%= link_to 'Explore', explore_path, class: 'nav-link' %>
-        </li>
-        <li class="nav-item">
-          <%= link_to 'Profile', profile_path, class: 'nav-link' %>
-        </li>
-        <li class="nav-item">
-          <%= button_to "Logout", logout_path, method: :delete, class: "btn btn-link nav-link px-0", form_class: "d-inline" %>
-        </li>
+        <% if current_user %>
+          <li class="nav-item">
+            <%= link_to 'Explore', explore_path, class: 'nav-link' %>
+          </li>
+          <li class="nav-item">
+            <%= link_to 'Match', match_path, class: 'nav-link' %>
+          </li>
+          <li class="nav-item">
+            <%= link_to 'Profile', profile_path, class: 'nav-link' %>
+          </li>
+          <li class="nav-item">
+            <%= button_to "Logout", logout_path, method: :delete, class: "btn btn-link nav-link px-0", form_class: "d-inline" %>
+          </li>
+        <% else %>
+          <li class="nav-item">
+            <%= link_to 'Sign up', signup_path, class: 'nav-link' %>
+          </li>
+          <li class="nav-item">
+            <%= link_to 'Log in', login_path, class: 'nav-link' %>
+          </li>
+        <% end %>
       </ul>
     </div>
   </div>
