--- a/app/views/skill_exchange_requests/index.html.erb
+++ b/app/views/skill_exchange_requests/index.html.erb
@@ -1,2 +1,11 @@
+<div class="container my-4">
+  <h2 class="mb-3">Recent Skill Exchange Requests</h2>
+
+  <%= turbo_stream_from "skill_exchange_requests" %>
+
+  <div id="ser_list">
+    <%= render @requests %>
+  </div>
+</div>
 <h1>Skill Exchange Requests</h1>
 <p>This is the skill exchange requests page. Placeholder content goes here.</p>
