--- a/app/views/explore/index.html.erb
+++ b/app/views/explore/index.html.erb
@@ -18,6 +18,7 @@
               type="text" 
               class="form-control" 
               placeholder="Search by skill, name, or modality (e.g., Python, John, Remote)..." 
+              value="<%= @query %>"
               data-search-target="input"
               data-action="input->search#filter">
           </div>
