--- a/app/views/skill_exchange_requests/_skill_request.html.erb
+++ b/app/views/skill_exchange_requests/_skill_request.html.erb
@@ -105,7 +105,7 @@
       <!-- Actions: show buttons only for other users -->
       <% if skill_request.user != current_user %>
         <div class="mt-3 d-flex gap-2">
-          <%= link_to "Send message", "/messages/new?recipient_id=#{skill_request.user.id}&skill_request_id=#{skill_request.id}", class: "btn btn-outline-primary btn-sm" %>
+          <%= link_to "Send message", message_thread_path(with: skill_request.user_id), class: "btn btn-outline-primary btn-sm" %>
           <%= button_to "Express interest", express_interest_skill_exchange_request_path(skill_request), method: :post, class: "btn btn-primary btn-sm" %>
         </div>
       <% else %>
