--- a/app/views/skill_exchange_requests/_skill_request.html.erb
+++ b/app/views/skill_exchange_requests/_skill_request.html.erb
@@ -126,6 +126,7 @@
             <% end %>
           <% end %>
         </div>
+      <% end %>
       <!-- Actions: show buttons only for other users -->
       <% if skill_request.user != current_user %>
         <div class="mt-3 d-flex gap-2">
@@ -138,4 +139,3 @@
     </div>
   </div>
 </div>
-
