--- a/app/views/shared/_navbar.html.erb
+++ b/app/views/shared/_navbar.html.erb
@@ -36,11 +36,7 @@
             <%= link_to "Profile", profile_path, class: "nav-link #{'active' if current_page?(profile_path)}" %>
           </li>
           <li class="nav-item">
-            <%= link_to "Logout",
-                        logout_path,
-                        method: :delete,
-                        data: { turbo_method: :delete, turbo_confirm: "Log out?" },
-                        class: "nav-link" %>
+            <%= link_to "Logout", logout_path, class: "nav-link" %>
           </li>
         <% else %>
           <li class="nav-item">
