--- a/app/views/match/index.html.erb
+++ b/app/views/match/index.html.erb
@@ -38,9 +38,9 @@
                       <% end %>
 
                       <div class="d-flex gap-2">
-                        <button class="btn btn-primary flex-grow-1" disabled>
-                          💬 Chat (Coming Soon)
-                        </button>
+                        <%= link_to "💬 Open chat",
+                                    message_thread_path(with: other_user.id),
+                                    class: "btn btn-primary flex-grow-1" %>
                       </div>
                     </div>
                   </div>
