--- a/app/views/match/index.html.erb
+++ b/app/views/match/index.html.erb
@@ -39,8 +39,8 @@
 
                       <div class="d-flex gap-2">
                            <%= link_to "💬 Message",
-                          message_thread_path(user_id: other_user.id),
-                          class: "btn btn-primary flex-grow-1" %>
+                          message_thread_path(with: other_user.id),
+                          class: "btn btn-primary flex-grow-1" %> 
                       </div>
                     </div>
                   </div>
