--- a/app/views/skill_exchange_requests/_skill_request.html.erb
+++ b/app/views/skill_exchange_requests/_skill_request.html.erb
@@ -107,7 +107,7 @@
         <% 
           other_user = skill_request.user
           already_matched = current_user.matched_with?(other_user)
-          already_requested = current_user.has_sent_request_to?(other_user)
+          already_requested = current_user.has_sent_request_for?(other_user, skill_request)
         %>
         <div class="mt-3 pt-2 border-top">
           <% if already_matched %>
@@ -121,6 +121,7 @@
           <% else %>
             <%= form_with url: user_skill_requests_path, method: :post, local: true, class: "d-inline w-100" do |f| %>
               <%= hidden_field_tag :receiver_id, skill_request.user_id %>
+              <%= hidden_field_tag :skill_exchange_request_id, skill_request.id %>
               <%= hidden_field_tag :skill, skill_request.teach_skill %>
               <%= f.submit "TeachMeBack Request", class: "btn btn-primary w-100" %>
             <% end %>
