--- a/app/views/skill_exchange_requests/_skill_request.html.erb
+++ b/app/views/skill_exchange_requests/_skill_request.html.erb
@@ -130,9 +130,10 @@
       <% end %>
       <!-- Actions: show buttons only for other users -->
       <% if skill_request.user != current_user %>
-        <div class="mt-3 d-flex gap-2">
-          <%= link_to "Send message", message_thread_path(with: skill_request.user_id), class: "btn btn-outline-primary btn-sm" %>
-          <%= button_to "Express interest", express_interest_skill_exchange_request_path(skill_request), method: :post, class: "btn btn-primary btn-sm" %>
+        <div class="mt-0" style="margin-top: -4px;">
+          <%= link_to "📩 Send message",
+                      message_thread_path(with: skill_request.user_id),
+                      class: "btn btn-success w-100" %>
         </div>
       <% else %>
         <div class="mt-3 text-muted small">You posted this request</div>
